[gd_scene load_steps=35 format=3 uid="uid://bfbu6hnsm8y7h"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_la670"]
[ext_resource type="Texture2D" uid="uid://tfakre157g2h" path="res://assets/sprites/knight.png" id="1_ru72k"]
[ext_resource type="Texture2D" uid="uid://xj4xpigo441h" path="res://assets/sprites/knight (2).png" id="2_7q5r8"]
[ext_resource type="AudioStream" uid="uid://bx7hfis8n4y88" path="res://assets/sounds/jump.wav" id="3_vsrvb"]
[ext_resource type="AudioStream" uid="uid://dxryjyky3fcsm" path="res://assets/sounds/tap.wav" id="4_3t2r4"]

[sub_resource type="AtlasTexture" id="AtlasTexture_peghq"]
atlas = ExtResource("2_7q5r8")
region = Rect2(0, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y3gpe"]
atlas = ExtResource("2_7q5r8")
region = Rect2(32, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kcih2"]
atlas = ExtResource("2_7q5r8")
region = Rect2(64, 192, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_5iu7d"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_peghq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y3gpe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kcih2")
}],
"loop": false,
"name": &"attack",
"speed": 6.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_20ung"]
atlas = ExtResource("1_ru72k")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7we0s"]
atlas = ExtResource("1_ru72k")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ukqf4"]
atlas = ExtResource("1_ru72k")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xpxeb"]
atlas = ExtResource("1_ru72k")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5jpnr"]
atlas = ExtResource("1_ru72k")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uoxri"]
atlas = ExtResource("1_ru72k")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vdtcj"]
atlas = ExtResource("1_ru72k")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h035y"]
atlas = ExtResource("1_ru72k")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_61v63"]
atlas = ExtResource("1_ru72k")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qd08k"]
atlas = ExtResource("1_ru72k")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v85ik"]
atlas = ExtResource("1_ru72k")
region = Rect2(160, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e8cop"]
atlas = ExtResource("1_ru72k")
region = Rect2(192, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5q3co"]
atlas = ExtResource("1_ru72k")
region = Rect2(224, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3uhya"]
atlas = ExtResource("1_ru72k")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5iku3"]
atlas = ExtResource("1_ru72k")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i7en3"]
atlas = ExtResource("1_ru72k")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yjera"]
atlas = ExtResource("1_ru72k")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eq6ga"]
atlas = ExtResource("1_ru72k")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k8kes"]
atlas = ExtResource("1_ru72k")
region = Rect2(160, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_or668"]
atlas = ExtResource("1_ru72k")
region = Rect2(192, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_thn5h"]
atlas = ExtResource("1_ru72k")
region = Rect2(224, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_abhhj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_20ung")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7we0s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ukqf4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xpxeb")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5jpnr")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uoxri")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vdtcj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h035y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_61v63")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qd08k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v85ik")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e8cop")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5q3co")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3uhya")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5iku3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i7en3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yjera")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eq6ga")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k8kes")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_or668")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_thn5h")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_ieldj"]
radius = 5.0

[sub_resource type="GDScript" id="GDScript_l1oid"]
script/source = "extends Area2D
"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_54ml6"]
size = Vector2(27, 6)

[node name="Player" type="CharacterBody2D" groups=["Persist"]]
z_index = 5
collision_layer = 2
script = ExtResource("1_la670")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(4, 4)
limit_left = -307
limit_top = -200
limit_bottom = 117
position_smoothing_enabled = true

[node name="AttackAnimatedSprite" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(0, -12)
sprite_frames = SubResource("SpriteFrames_5iu7d")
animation = &"attack"
frame = 2
frame_progress = 1.0
flip_h = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -12)
sprite_frames = SubResource("SpriteFrames_abhhj")
animation = &"idle"
autoplay = "idle"
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -6)
shape = SubResource("CircleShape2D_ieldj")

[node name="Knife" type="Area2D" parent="."]
position = Vector2(-10, -6)
collision_layer = 2
script = SubResource("GDScript_l1oid")

[node name="KnifeCollisionShape" type="CollisionShape2D" parent="Knife"]
position = Vector2(-8.5, 0)
shape = SubResource("RectangleShape2D_54ml6")
disabled = true

[node name="JumpSoundEffect" type="AudioStreamPlayer2D" parent="."]
position = Vector2(0, 14)
stream = ExtResource("3_vsrvb")
volume_db = -10.242
bus = &"Sound Effects"

[node name="AttackSoundEffect" type="AudioStreamPlayer2D" parent="."]
position = Vector2(0, 15)
stream = ExtResource("4_3t2r4")
bus = &"Sound Effects"

[connection signal="animation_finished" from="AttackAnimatedSprite" to="." method="_on_attack_animated_sprite_animation_finished"]
[connection signal="body_entered" from="Knife" to="." method="_on_knife_body_entered"]
